Fix project cards sizing and alignment
- Set all cards to have the same height.
- Position the technologies used at the bottom of the card.

--- a/css/main.css
+++ b/css/main.css
@@ -278,6 +278,12 @@ main li {    /* responsive */
     transition: all 300ms ease-in-out;
 }
 
+.card a {
+    display: flex;
+    align-items: stretch;
+    height: 100%;
+}
+
 .card:hover,
 .card:focus {
     transform: translateY(-8px);
